# Fuzzify

./: .dockerignore  .gitignore  README.md  dnstwist.ipynb  docker-compose.yml  package-lock 2.json  package.json  pyproject.toml  vercel.json
backend/: .env  Dockerfile  README.md  andrew-test-scan.py  app.py  flask_testing.py  init.sql  models 2.py  models.py  pyproject.toml  requirements.txt  test-db.py  test_domain.py  test_insert.py  test_perm.py  test_pubsub.py  test_scan.py  test_seed.py  test_user.py
frontend/: Dockerfile  Dockerfile 2  README.md  dockerfile  eslint.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.js  page.tsx  types.d.ts
frontend/app/table/: layout.tsx  page.tsx
frontend/components/: sidebar.tsx
frontend/public/: sample-table.JSON
frontend/src/: index.css
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/contexts/: UserContext.tsx
frontend/src/hooks/: is-logged-in.tsx  useDomains.ts  useFetchWithCache.ts
frontend/src/styles/: globals.css
hero-page/: .dockerignore  Dockerfile  index.css  package-lock.json  package.json  tailwind.config.ts  vercel.json
hero-page/app/: globals.css  layout.tsx  metadata.ts  not-found.tsx  page.tsx
hero-page/app/demo-app/: layout.tsx  page.tsx  test-not-found.tsx
hero-page/components/: animated-background.tsx  header.tsx  main-content.tsx  parallax-background.tsx
hero-page/components/dashboard/: AlertBanner.tsx
hero-page/components/domains/: DomainRootForm.tsx  (+2 more)
hero-page/hooks/: use-mobile.tsx
(+51 files in other folders)
